# food-image-analyzer-langgraph

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
notebooks/: research.ipynb
src/api/: app.py  schemas.py
src/evaluation/: eval_dataset.py  llm_judging.py  run_evaluation.py  schema.py  scoring.py
src/services/: image_processing.py  prompts.py
src/services/analysis/: ingredients.py  nutrients.py  schemas.py
src/services/cache/: client.py  config.py
src/services/chat_gpt/: config.py  gpt.py
src/services/database/: client.py  config.py
src/services/llm/: config.py  food_llm.py  schemas.py
src/services/opik_tracing/: config.py  configure.py
src/tests/: conftest.py
src/tests/api/: test_app.py
src/tests/services/analysis/: test_ingredients.py  test_nutrients.py
src/tests/services/llm/: test_food_llm.py
tests/: conftest.py
tests/api/: test_app.py
tests/services/analysis/: test_ingredients.py  test_nutrients.py
