[project]
name = "food-image-analyzer"
version = "0.1.0"
description = "AI-powered food image analyzer using OpenAI's API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "openai>=2.8.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "ruff>=0.14.8",
]