[project]
name = "food-image-analyzer"
version = "0.1.0"
description = "AI-powered food image analyzer using OpenAI's API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "langchain>=1.2.8",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langsmith>=0.6.8",
    "loguru>=0.7.3",
    "openai>=2.8.1",
    "openevals>=0.1.3",
    "opik>=1.9.60",
    "pymongo>=4.16.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.8",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
